# gel-image-extractor

./: .gitignore  AGENTS.md  QUESTIONS_FOR_USERS.md  README.md  pyproject.toml
diagrams/: program-flow.mmd
src/gel_extractor/: cli.py
src/gel_extractor/core/: __init__.py  band_propagation.py  bands.py  curve_lanes.py  ladder.py  lanes.py  ridge_lanes.py  snake_lanes.py  viterbi_lanes.py
src/gel_extractor/purity/: analysis.py  cli.py  debug_viz.py  methods.py  output.py
src/neband/: __init__.py  cli.py
src/neband/api/: __init__.py  analysis.py  app.py  image_cache.py  wsgi.py
src/neband/core/: band_propagation.py  bands.py  image_io.py  ladder.py  lanes.py  ridge_lanes.py  snake_lanes.py  viterbi_lanes.py
src/neband/purity/: __init__.py  analysis.py  cli.py  debug_viz.py  methods.py  output.py
tests/: conftest.py  test_api_analysis.py  test_api_app.py  test_api_image_cache.py  test_core_band_propagation.py  test_core_bands.py  test_core_curve_lanes.py  test_core_image_io.py  test_core_ladder.py  test_core_lanes.py  test_purity_analysis.py  test_purity_cli.py  test_purity_debug_viz.py  test_purity_integration.py  test_purity_methods.py
