[project]
name = "neband"
version = "0.1.0"
description = "Extract quantitative and categorical data from gel electrophoresis images."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "pillow>=10.0",
]

[project.scripts]
neband = "neband.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neband"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
