[project]
name = "neband"
version = "0.1.0"
description = "Extract quantitative and categorical data from gel electrophoresis images."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Productionized HTTP API (src/neband/api/) -- install via `neband[api]`.
# Not a core dependency: most consumers only need the CLI/library, per the
# same "keep heavy/optional deps opt-in" reasoning as sam-zeroshot. See GH
# issue #1 for the full design and `src/neband/api/wsgi.py` for running it.
api = [
    "flask>=3.0",
    "gunicorn>=22.0",
]

[project.scripts]
neband = "neband.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neband"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "neband[api]",
]
